feat(controller): support async request metadata storage
Signed-off-by: wangxye <wangxuanye@automq.com>