@@ -23,7 +23,6 @@ import apache.rocketmq.controller.v1.Code;
 import apache.rocketmq.controller.v1.ConsumerGroup;
 import apache.rocketmq.controller.v1.CommitStreamObjectRequest;
 import apache.rocketmq.controller.v1.CommitWALObjectRequest;
-import apache.rocketmq.controller.v1.CreateGroupReply;
 import apache.rocketmq.controller.v1.CreateGroupRequest;
 import apache.rocketmq.controller.v1.GroupStatus;
 import apache.rocketmq.controller.v1.GroupType;
@@ -89,7 +88,6 @@ import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
@@ -152,17 +150,20 @@ public class DefaultMetadataStore implements MetadataStore {
     }
 
     @Override
-    public Node registerBrokerNode(String name, String address, String instanceId) throws ControllerException {
+    public CompletableFuture<Node> registerBrokerNode(String name, String address, String instanceId) throws ControllerException {
+        CompletableFuture<Node> future = new CompletableFuture<>();
         if (Strings.isNullOrEmpty(name)) {
             throw new ControllerException(Code.BAD_REQUEST_VALUE, "Broker name is null or empty");
         }
 
         if (Strings.isNullOrEmpty(address)) {
             throw new ControllerException(Code.BAD_REQUEST_VALUE, "Broker address is null or empty");
+
         }
 
         if (Strings.isNullOrEmpty(instanceId)) {
             throw new ControllerException(Code.BAD_REQUEST_VALUE, "Broker instance-id is null or empty");
+
         }
 
         for (; ; ) {
@@ -190,16 +191,24 @@ public class DefaultMetadataStore implements MetadataStore {
                         nodeMapper.create(node);
                         session.commit();
                     }
-                    return node;
+                    future.complete(node);
                 }
             } else {
                 try {
-                    return controllerClient.registerBroker(this.leaderAddress(), name, address, instanceId).get();
-                } catch (InterruptedException | ExecutionException e) {
-                    throw new ControllerException(Code.INTERRUPTED_VALUE, e);
+                    controllerClient.registerBroker(this.leaderAddress(), name, address, instanceId).whenComplete((res, e) -> {
+                        if (null != e) {
+                            future.completeExceptionally(e);
+                        } else {
+                            future.complete(res);
+                        }
+                    });
+                } catch (ControllerException e) {
+                    future.completeExceptionally(e);
                 }
             }
+            break;
         }
+        return future;
     }
 
     @Override
@@ -252,7 +261,8 @@ public class DefaultMetadataStore implements MetadataStore {
     }
 
     @Override
-    public long createTopic(String topicName, int queueNum) throws ControllerException {
+    public CompletableFuture<Long> createTopic(String topicName, int queueNum) throws ControllerException {
+        CompletableFuture<Long> future = new CompletableFuture<>();
         for (; ; ) {
             if (this.isLeader()) {
                 Set<Integer> toNotify = new HashSet<>();
@@ -329,22 +339,24 @@ public class DefaultMetadataStore implements MetadataStore {
                     // Commit transaction
                     session.commit();
                     this.notifyOnResourceChange(toNotify);
-                    return topicId;
+                    future.complete(topicId);
                 }
             } else {
                 try {
-                    return controllerClient.createTopic(this.leaderAddress(), topicName, queueNum).get();
-                } catch (InterruptedException e) {
-                    throw new ControllerException(Code.INTERNAL_VALUE, e);
-                } catch (ExecutionException e) {
-                    if (e.getCause() instanceof ControllerException) {
-                        throw (ControllerException) e.getCause();
-                    } else {
-                        throw new ControllerException(Code.INTERNAL_VALUE, e);
-                    }
+                    controllerClient.createTopic(this.leaderAddress(), topicName, queueNum).whenComplete((res, e) -> {
+                        if (null != e) {
+                            future.completeExceptionally(e);
+                        } else {
+                            future.complete(res);
+                        }
+                    });
+                } catch (ControllerException e) {
+                    future.completeExceptionally(e);
                 }
             }
+            break;
         }
+        return future;
     }
 
     private static long createStream(StreamMapper streamMapper, long topicId, int queueId,
@@ -361,7 +373,8 @@ public class DefaultMetadataStore implements MetadataStore {
     }
 
     @Override
-    public void deleteTopic(long topicId) throws ControllerException {
+    public CompletableFuture<Void> deleteTopic(long topicId) throws ControllerException {
+        CompletableFuture<Void> future = new CompletableFuture<>();
         for (; ; ) {
             if (this.isLeader()) {
                 Set<Integer> toNotify = new HashSet<>();
@@ -395,16 +408,28 @@ public class DefaultMetadataStore implements MetadataStore {
                     session.commit();
                 }
                 this.notifyOnResourceChange(toNotify);
+                future.complete(null);
             } else {
-                controllerClient.deleteTopic(this.leaderAddress(), topicId);
+                try {
+                    controllerClient.deleteTopic(this.leaderAddress(), topicId).whenComplete((res, e) -> {
+                        if (null != e) {
+                            future.completeExceptionally(e);
+                        } else {
+                            future.complete(null);
+                        }
+                    });
+                } catch (ControllerException e) {
+                    future.completeExceptionally(e);
+                }
             }
             break;
         }
+        return future;
     }
 
     @Override
     public CompletableFuture<apache.rocketmq.controller.v1.Topic> describeTopic(Long topicId,
-        String topicName) {
+        String topicName) throws ControllerException {
         CompletableFuture<apache.rocketmq.controller.v1.Topic> future = new CompletableFuture<>();
         if (isLeader()) {
             try (SqlSession session = getSessionFactory().openSession()) {
@@ -412,10 +437,8 @@ public class DefaultMetadataStore implements MetadataStore {
                 Topic topic = topicMapper.get(topicId, topicName);
 
                 if (null == topic) {
-                    ControllerException e = new ControllerException(Code.NOT_FOUND_VALUE,
+                    throw new ControllerException(Code.NOT_FOUND_VALUE,
                         String.format("Topic not found for topic-id=%d, topic-name=%s", topicId, topicName));
-                    future.completeExceptionally(e);
-                    return future;
                 }
 
                 QueueAssignmentMapper assignmentMapper = session.getMapper(QueueAssignmentMapper.class);
@@ -471,7 +494,8 @@ public class DefaultMetadataStore implements MetadataStore {
     }
 
     @Override
-    public List<apache.rocketmq.controller.v1.Topic> listTopics() {
+    public CompletableFuture<List<apache.rocketmq.controller.v1.Topic>> listTopics() {
+        CompletableFuture<List<apache.rocketmq.controller.v1.Topic>> future = new CompletableFuture<>();
         List<apache.rocketmq.controller.v1.Topic> result = new ArrayList<>();
         try (SqlSession session = getSessionFactory().openSession()) {
             TopicMapper topicMapper = session.getMapper(TopicMapper.class);
@@ -487,8 +511,9 @@ public class DefaultMetadataStore implements MetadataStore {
                     .build();
                 result.add(t);
             }
+            future.complete(result);
         }
-        return result;
+        return future;
     }
 
     /**
@@ -523,16 +548,20 @@ public class DefaultMetadataStore implements MetadataStore {
     }
 
     @Override
-    public List<QueueAssignment> listAssignments(Long topicId, Integer srcNodeId, Integer dstNodeId,
+    public CompletableFuture<List<QueueAssignment>> listAssignments(Long topicId, Integer srcNodeId, Integer dstNodeId,
         AssignmentStatus status) {
+        CompletableFuture<List<QueueAssignment>> future = new CompletableFuture<>();
         try (SqlSession session = getSessionFactory().openSession()) {
             QueueAssignmentMapper mapper = session.getMapper(QueueAssignmentMapper.class);
-            return mapper.list(topicId, srcNodeId, dstNodeId, status, null);
+            List<QueueAssignment> queueAssignments = mapper.list(topicId, srcNodeId, dstNodeId, status, null);
+            future.complete(queueAssignments);
+            return future;
         }
     }
 
     @Override
-    public void reassignMessageQueue(long topicId, int queueId, int dstNodeId) throws ControllerException {
+    public CompletableFuture<Void> reassignMessageQueue(long topicId, int queueId, int dstNodeId) throws ControllerException {
+        CompletableFuture<Void> future = new CompletableFuture<>();
         for (; ; ) {
             if (isLeader()) {
                 try (SqlSession session = sessionFactory.openSession()) {
@@ -556,22 +585,36 @@ public class DefaultMetadataStore implements MetadataStore {
                                 assignment.setStatus(AssignmentStatus.ASSIGNMENT_STATUS_YIELDING);
                                 assignmentMapper.update(assignment);
                             }
-                            case ASSIGNMENT_STATUS_DELETED ->
+                            case ASSIGNMENT_STATUS_DELETED -> {
                                 throw new ControllerException(Code.NOT_FOUND_VALUE, "Already deleted");
+                            }
                         }
                         break;
                     }
                     session.commit();
                 }
+                future.complete(null);
                 break;
             } else {
-                this.controllerClient.reassignMessageQueue(leaderAddress(), topicId, queueId, dstNodeId);
+                try {
+                    this.controllerClient.reassignMessageQueue(leaderAddress(), topicId, queueId, dstNodeId).whenComplete((res, e) -> {
+                        if (e != null) {
+                            future.completeExceptionally(e);
+                        } else {
+                            future.complete(null);
+                        }
+                    });
+                } catch (ControllerException e) {
+                    future.completeExceptionally(e);
+                }
             }
         }
+        return future;
     }
 
     @Override
-    public void markMessageQueueAssignable(long topicId, int queueId) throws ControllerException {
+    public CompletableFuture<Void> markMessageQueueAssignable(long topicId, int queueId) {
+        CompletableFuture<Void> future = new CompletableFuture<>();
         for (; ; ) {
             if (isLeader()) {
                 try (SqlSession session = getSessionFactory().openSession()) {
@@ -590,24 +633,28 @@ public class DefaultMetadataStore implements MetadataStore {
                     }
                     session.commit();
                 }
+                future.complete(null);
                 break;
             } else {
                 try {
-                    this.controllerClient.notifyMessageQueueAssignable(leaderAddress(), topicId, queueId).get();
-                } catch (InterruptedException e) {
-                    throw new ControllerException(Code.INTERRUPTED_VALUE, e);
-                } catch (ExecutionException e) {
-                    if (e.getCause() instanceof ControllerException) {
-                        throw (ControllerException) e.getCause();
-                    }
-                    throw new ControllerException(Code.INTERNAL_VALUE, e);
+                    this.controllerClient.notifyMessageQueueAssignable(leaderAddress(), topicId, queueId).whenComplete((res, e) -> {
+                        if (null != e) {
+                            future.completeExceptionally(e);
+                        } else {
+                            future.complete(null);
+                        }
+                    });
+                } catch (ControllerException e) {
+                    future.completeExceptionally(e);
                 }
             }
         }
+        return future;
     }
 
     @Override
-    public void commitOffset(long groupId, long topicId, int queueId, long offset) throws ControllerException {
+    public CompletableFuture<Void> commitOffset(long groupId, long topicId, int queueId, long offset) {
+        CompletableFuture<Void> future = new CompletableFuture<>();
         for (; ; ) {
             if (isLeader()) {
                 try (SqlSession session = getSessionFactory().openSession()) {
@@ -622,17 +669,30 @@ public class DefaultMetadataStore implements MetadataStore {
                     progress.setQueueOffset(offset);
                     groupProgressMapper.createOrUpdate(progress);
                     session.commit();
-                    break;
                 }
+                future.complete(null);
             } else {
-                this.controllerClient.commitOffset(leaderAddress(), groupId, topicId, queueId, offset);
+                try {
+                    this.controllerClient.commitOffset(leaderAddress(), groupId, topicId, queueId, offset).whenComplete((res, e) -> {
+                        if (null != e) {
+                            future.completeExceptionally(e);
+                        } else {
+                            future.complete(null);
+                        }
+                    });
+                } catch (ControllerException e) {
+                    future.completeExceptionally(e);
+                }
             }
+            break;
         }
+        return future;
     }
 
     @Override
-    public long createGroup(String groupName, int maxRetry, GroupType type,
+    public CompletableFuture<Long> createGroup(String groupName, int maxRetry, GroupType type,
         long deadLetterTopicId) throws ControllerException {
+        CompletableFuture<Long> future = new CompletableFuture<>();
         for (; ; ) {
             if (isLeader()) {
                 try (SqlSession session = getSessionFactory().openSession()) {
@@ -653,7 +713,7 @@ public class DefaultMetadataStore implements MetadataStore {
                     group.setGroupType(type);
                     groupMapper.create(group);
                     session.commit();
-                    return group.getId();
+                    future.complete(group.getId());
                 }
             } else {
                 CreateGroupRequest request = CreateGroupRequest.newBuilder()
@@ -662,22 +722,22 @@ public class DefaultMetadataStore implements MetadataStore {
                     .setGroupType(type)
                     .setDeadLetterTopicId(deadLetterTopicId)
                     .build();
+
                 try {
-                    CreateGroupReply reply = controllerClient.createGroup(leaderAddress(), request).get();
-                    if (reply.getStatus().getCode() == Code.OK) {
-                        return reply.getGroupId();
-                    }
-                    throw new ControllerException(reply.getStatus().getCodeValue(), reply.getStatus().getMessage());
-                } catch (InterruptedException e) {
-                    throw new ControllerException(Code.INTERRUPTED_VALUE, e);
-                } catch (ExecutionException e) {
-                    if (e.getCause() instanceof ControllerException) {
-                        throw (ControllerException) e.getCause();
-                    }
-                    throw new ControllerException(Code.INTERNAL_VALUE, e);
+                    this.controllerClient.createGroup(leaderAddress(), request).whenComplete((reply, e) -> {
+                        if (null != e) {
+                            future.completeExceptionally(e);
+                        } else {
+                            future.complete(reply.getGroupId());
+                        }
+                    });
+                } catch (ControllerException e) {
+                    future.completeExceptionally(e);
                 }
             }
+            break;
         }
+        return future;
     }
 
     @Override
@@ -732,7 +792,8 @@ public class DefaultMetadataStore implements MetadataStore {
     }
 
     @Override
-    public void trimStream(long streamId, long streamEpoch, long newStartOffset) throws ControllerException {
+    public CompletableFuture<Void> trimStream(long streamId, long streamEpoch, long newStartOffset) throws ControllerException {
+        CompletableFuture<Void> future = new CompletableFuture<>();
         for (; ; ) {
             if (this.isLeader()) {
                 try (SqlSession session = this.sessionFactory.openSession(false)) {
@@ -753,16 +814,16 @@ public class DefaultMetadataStore implements MetadataStore {
                     }
                     if (stream.getState() == StreamState.CLOSED) {
                         LOGGER.warn("Stream[{}]‘s state is CLOSED, can't trim", streamId);
-                        return;
+                        return null;
                     }
                     if (stream.getStartOffset() > newStartOffset) {
                         LOGGER.warn("Stream[{}]‘s start offset {} is larger than request new start offset {}",
                             streamId, stream.getStartOffset(), newStartOffset);
-                        return;
+                        return null;
                     }
                     if (stream.getStartOffset() == newStartOffset) {
                         // regard it as redundant trim operation, just return success
-                        return;
+                        return null;
                     }
 
                     // now the request is valid
@@ -836,6 +897,7 @@ public class DefaultMetadataStore implements MetadataStore {
                     session.commit();
                     LOGGER.info("Node[node-id={}] trim stream [stream-id={}] with epoch={} and newStartOffset={}",
                         this.lease.getNodeId(), streamId, streamEpoch, newStartOffset);
+                    future.complete(null);
                 }
             } else {
                 TrimStreamRequest request = TrimStreamRequest.newBuilder()
@@ -844,18 +906,20 @@ public class DefaultMetadataStore implements MetadataStore {
                     .setNewStartOffset(newStartOffset)
                     .build();
                 try {
-                    this.controllerClient.trimStream(this.leaderAddress(), request).get();
-                } catch (InterruptedException e) {
-                    throw new ControllerException(Code.INTERRUPTED_VALUE, e);
-                } catch (ExecutionException e) {
-                    if (e.getCause() instanceof ControllerException) {
-                        throw (ControllerException) e.getCause();
-                    }
-                    throw new ControllerException(Code.INTERNAL_VALUE, e);
+                    this.controllerClient.trimStream(this.leaderAddress(), request).whenComplete(((reply, e) -> {
+                        if (null != e) {
+                            future.completeExceptionally(e);
+                        } else {
+                            future.complete(null);
+                        }
+                    }));
+                } catch (ControllerException e) {
+                    future.completeExceptionally(e);
                 }
             }
             break;
         }
+        return future;
     }
 
     @Override
@@ -1116,8 +1180,10 @@ public class DefaultMetadataStore implements MetadataStore {
                     }
                     S3ObjectMapper s3ObjectMapper = session.getMapper(S3ObjectMapper.class);
                     long prepareTs = System.currentTimeMillis(), expiredTs = prepareTs + (long) ttlInMinutes * 60 * 1000;
+
                     List<Long> objectIds = IntStream.range(0, count)
-                        .mapToObj(i -> {
+                        .boxed()
+                        .map(i -> {
                             S3Object object = new S3Object();
                             object.setState(S3ObjectState.BOS_PREPARED);
                             object.setPreparedTimestamp(prepareTs);
@@ -1156,7 +1222,7 @@ public class DefaultMetadataStore implements MetadataStore {
     @Override
     public CompletableFuture<Void> commitWalObject(apache.rocketmq.controller.v1.S3WALObject walObject,
         List<apache.rocketmq.controller.v1.S3StreamObject> streamObjects,
-        List<Long> compactedObjects) {
+        List<Long> compactedObjects) throws ControllerException {
         CompletableFuture<Void> future = new CompletableFuture<>();
         for (; ; ) {
             if (isLeader()) {
@@ -1184,16 +1250,12 @@ public class DefaultMetadataStore implements MetadataStore {
 
                         if (!checkStreamAdvance(session, offsets)) {
                             LOGGER.error("S3WALObject[object-id={}]'s stream advance check failed", walObject.getObjectId());
-                            ControllerException e = new ControllerException(Code.NOT_FOUND_VALUE, String.format("S3WALObject[object-id=%d]'s stream advance check failed", walObject.getObjectId()));
-                            future.completeExceptionally(e);
-                            break;
+                            throw new ControllerException(Code.NOT_FOUND_VALUE, String.format("S3WALObject[object-id=%d]'s stream advance check failed", walObject.getObjectId()));
                         }
                     }
                     // commit object
                     if (!commitObject(walObject.getObjectId(), session, committedTs)) {
-                        ControllerException e = new ControllerException(Code.ILLEGAL_STATE_VALUE, String.format("S3WALObject[object-id=%d] is not prepare", walObject.getObjectId()));
-                        future.completeExceptionally(e);
-                        break;
+                        throw new ControllerException(Code.ILLEGAL_STATE_VALUE, String.format("S3WALObject[object-id=%d] is not prepare", walObject.getObjectId()));
                     }
 
                     long dataTs = committedTs;
@@ -1229,9 +1291,7 @@ public class DefaultMetadataStore implements MetadataStore {
                         for (apache.rocketmq.controller.v1.S3StreamObject s3StreamObject : streamObjects) {
                             long oId = s3StreamObject.getObjectId();
                             if (!commitObject(oId, session, committedTs)) {
-                                ControllerException e = new ControllerException(Code.ILLEGAL_STATE_VALUE, String.format("S3StreamObject[object-id=%d] is not prepare", oId));
-                                future.completeExceptionally(e);
-                                return future;
+                                throw new ControllerException(Code.ILLEGAL_STATE_VALUE, String.format("S3StreamObject[object-id=%d] is not prepare", oId));
                             }
                         }
                         // create stream object records
@@ -1276,7 +1336,7 @@ public class DefaultMetadataStore implements MetadataStore {
     }
 
     @Override
-    public CompletableFuture<Void> commitStreamObject(apache.rocketmq.controller.v1.S3StreamObject streamObject, List<Long> compactedObjects) {
+    public CompletableFuture<Void> commitStreamObject(apache.rocketmq.controller.v1.S3StreamObject streamObject, List<Long> compactedObjects) throws ControllerException {
         CompletableFuture<Void> future = new CompletableFuture<>();
         for (; ; ) {
             if (isLeader()) {
@@ -1290,9 +1350,7 @@ public class DefaultMetadataStore implements MetadataStore {
 
                     // commit object
                     if (!commitObject(streamObject.getObjectId(), session, committedTs)) {
-                        ControllerException e = new ControllerException(Code.ILLEGAL_STATE_VALUE, String.format("S3StreamObject[object-id=%d] is not prepare", streamObject.getObjectId()));
-                        future.completeExceptionally(e);
-                        break;
+                        throw new ControllerException(Code.ILLEGAL_STATE_VALUE, String.format("S3StreamObject[object-id=%d] is not prepare", streamObject.getObjectId()));
                     }
                     long dataTs = committedTs;
                     if (!Objects.isNull(compactedObjects) && !compactedObjects.isEmpty()) {
@@ -1353,28 +1411,32 @@ public class DefaultMetadataStore implements MetadataStore {
     }
 
     @Override
-    public List<apache.rocketmq.controller.v1.S3WALObject> listWALObjects() {
+    public CompletableFuture<List<apache.rocketmq.controller.v1.S3WALObject>> listWALObjects() {
+        CompletableFuture<List<apache.rocketmq.controller.v1.S3WALObject>> future = new CompletableFuture<>();
         try (SqlSession session = this.sessionFactory.openSession()) {
             S3WALObjectMapper s3WALObjectMapper = session.getMapper(S3WALObjectMapper.class);
-            return s3WALObjectMapper.list(this.lease.getNodeId(), null).stream()
+            List<apache.rocketmq.controller.v1.S3WALObject> walObjects = s3WALObjectMapper.list(this.lease.getNodeId(), null).stream()
                 .map(s3WALObject -> {
                     Map<Long, SubStream> subStreams = gson.fromJson(new String(s3WALObject.getSubStreams().getBytes(StandardCharsets.UTF_8)), new TypeToken<Map<Long, SubStream>>() {
 
                     }.getType());
                     return buildS3WALObject(s3WALObject, subStreams);
                 })
-                .collect(Collectors.toList());
+                .toList();
+            future.complete(walObjects);
         }
+        return future;
     }
 
     @Override
-    public List<apache.rocketmq.controller.v1.S3WALObject> listWALObjects(long streamId, long startOffset,
+    public CompletableFuture<List<apache.rocketmq.controller.v1.S3WALObject>> listWALObjects(long streamId, long startOffset,
         long endOffset, int limit) {
+        CompletableFuture<List<apache.rocketmq.controller.v1.S3WALObject>> future = new CompletableFuture<>();
         try (SqlSession session = this.sessionFactory.openSession()) {
             S3WALObjectMapper s3WALObjectMapper = session.getMapper(S3WALObjectMapper.class);
             List<com.automq.rocketmq.controller.metadata.database.dao.S3WALObject> s3WALObjects = s3WALObjectMapper.list(this.lease.getNodeId(), null);
 
-            return s3WALObjects.stream()
+            List<apache.rocketmq.controller.v1.S3WALObject> walObjects = s3WALObjects.stream()
                 .map(s3WALObject -> {
                     TypeToken<Map<Long, SubStream>> typeToken = new TypeToken<>() {
 
@@ -1396,14 +1458,18 @@ public class DefaultMetadataStore implements MetadataStore {
                 .filter(Objects::nonNull)
                 .limit(limit)
                 .collect(Collectors.toList());
+            future.complete(walObjects);
         }
+        return future;
     }
 
-    public List<apache.rocketmq.controller.v1.S3StreamObject> listStreamObjects(long streamId, long startOffset,
+    @Override
+    public CompletableFuture<List<apache.rocketmq.controller.v1.S3StreamObject>> listStreamObjects(long streamId, long startOffset,
         long endOffset, int limit) {
+        CompletableFuture<List<apache.rocketmq.controller.v1.S3StreamObject>> future = new CompletableFuture<>();
         try (SqlSession session = this.sessionFactory.openSession()) {
             S3StreamObjectMapper s3StreamObjectMapper = session.getMapper(S3StreamObjectMapper.class);
-            return s3StreamObjectMapper.list(null, streamId, startOffset, endOffset, limit).stream()
+            List<apache.rocketmq.controller.v1.S3StreamObject> streamObjects = s3StreamObjectMapper.list(null, streamId, startOffset, endOffset, limit).stream()
                 .map(streamObject -> apache.rocketmq.controller.v1.S3StreamObject.newBuilder()
                     .setStreamId(streamObject.getStreamId())
                     .setObjectSize(streamObject.getObjectSize())
@@ -1413,8 +1479,10 @@ public class DefaultMetadataStore implements MetadataStore {
                     .setBaseDataTimestamp(streamObject.getBaseDataTimestamp())
                     .setCommittedTimestamp(streamObject.getCommittedTimestamp())
                     .build())
-                .collect(Collectors.toList());
+                .toList();
+            future.complete(streamObjects);
         }
+        return future;
     }
 
     private apache.rocketmq.controller.v1.S3WALObject buildS3WALObject(
@@ -1483,7 +1551,8 @@ public class DefaultMetadataStore implements MetadataStore {
     }
 
     @Override
-    public long getOrCreateRetryStream(String groupName, long topicId, int queueId) throws ControllerException {
+    public CompletableFuture<Long> getOrCreateRetryStream(String groupName, long topicId, int queueId) throws ControllerException {
+        CompletableFuture<Long> future = new CompletableFuture<>();
         for (; ; ) {
             if (isLeader()) {
                 try (SqlSession session = getSessionFactory().openSession()) {
@@ -1510,7 +1579,7 @@ public class DefaultMetadataStore implements MetadataStore {
                             String.format("Group '%s' is not found", groupName));
                     }
 
-                    long groupId = groups.get(0).getId();
+                    long groupId = groups.get(0).getId(), streamId = -1L;
                     StreamMapper streamMapper = session.getMapper(StreamMapper.class);
                     List<Stream> streams = streamMapper.list(topicId, queueId, groupId)
                         .stream().filter(stream -> stream.getStreamRole() == StreamRole.STREAM_ROLE_RETRY).toList();
@@ -1525,25 +1594,29 @@ public class DefaultMetadataStore implements MetadataStore {
                         stream.setDstNodeId(assignment.getDstNodeId());
                         streamMapper.create(stream);
                         session.commit();
-                        return stream.getId();
+                        streamId = stream.getId();
                     } else {
-                        return streams.get(0).getId();
+                        streamId = streams.get(0).getId();
                     }
+                    future.complete(streamId);
                 }
             } else {
                 try {
-                    this.controllerClient.createRetryStream(leaderAddress(), groupName, topicId, queueId).get();
-                } catch (InterruptedException e) {
-                    throw new ControllerException(Code.INTERRUPTED_VALUE, e);
-                } catch (ExecutionException e) {
-                    if (e.getCause() instanceof ControllerException) {
-                        throw (ControllerException) e.getCause();
-                    } else {
-                        throw new ControllerException(Code.INTERNAL_VALUE, e);
-                    }
+                    this.controllerClient.createRetryStream(leaderAddress(), groupName, topicId, queueId)
+                        .whenComplete((res, e) -> {
+                            if (null != e) {
+                                future.completeExceptionally(e);
+                            } else {
+                                future.complete(res);
+                            }
+                        });
+                } catch (ControllerException e) {
+                    future.completeExceptionally(e);
                 }
             }
+            break;
         }
+        return future;
     }
 
     @Override
